[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Bot.gd" type="Script" id=1]
[ext_resource path="res://assets/bot/player/robot_hd_walk2_processed.svg" type="Texture" id=2]
[ext_resource path="res://assets/bot/player/robot_hd_processed.svg" type="Texture" id=3]
[ext_resource path="res://assets/bot/player/robot_hd_walk1_processed.svg" type="Texture" id=4]
[ext_resource path="res://assets/raw/robot_hd_sleep_slouch_unshadow.svg" type="Texture" id=5]
[ext_resource path="res://assets/audio/bot_startup.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "stationary",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 160 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 160 )

[node name="Bot" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
input_pickable = true
script = ExtResource( 1 )

[node name="BotSprites" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "stationary"
playing = true

[node name="BotCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="BotCenter" type="Area2D" parent="."]

[node name="BotCenterCollision" type="CollisionShape2D" parent="BotCenter"]
shape = SubResource( 4 )

[node name="BotAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="input_event" from="." to="." method="_on_Bot_input_event"]
